--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Meow",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors",
+    "build:dev": "webpack --progress --colors --watch",
+    "start": "nodemon server.js",
     "build": "webpack --progress --colors",
     "test": "mocha --compilers js:babel-register --recursive",
     "test:watch": "mocha --compilers js:babel-register --recursive --watch",
@@ -33,6 +34,8 @@
     }
   },
   "dependencies": {
+    "body-parser": "^1.15.1",
+    "express": "^4.13.4",
     "reqwest": "^2.0.5"
   }
 }
